Forbedringer på bursdag.

--- a/accounts/templates/accounts/user_birthday.html
+++ b/accounts/templates/accounts/user_birthday.html
@@ -3,10 +3,11 @@
 {% load markdown_deux_tags %}
 {% load mediawiki_links %}
 
-{% block title %}Bursdag {% endblock %}
+{% block title %}Bursdag{% endblock %}
 
 
 {% block content %}
+<h1>Hvem har bursdag i dag?</h1>
 <ul class="list-group">
     {% for user in users %}
     <li class="list-group-item">
