--- a/templates/base.html
+++ b/templates/base.html
@@ -130,6 +130,7 @@
             </a>
             <ul class="dropdown-menu" >
                 <li><a href="{% url "user_polls" %}">Brukeravstemninger</a></li>
+                <li><a href="{% url "users_birthday" %}">Bursdag</a></li>
             </ul>
         </li>
         {% endif %}
