Forenkler templatekode som viser fullt navn eller brukernavn

--- a/accounts/templates/accounts/user_birthday.html
+++ b/accounts/templates/accounts/user_birthday.html
@@ -20,11 +20,7 @@
                                    {%endif %}></div>
         <div class="col-md-9">
             <h2>
-                {% if user.get_full_name %}
-                {{ user.get_full_name }}
-                {% else %}
-                {{ user.username }}
-                {% endif %}
+                {% firstof user.get_full_name user.username %}
             </h2>
 
             <p>
