--- a/accounts/templates/accounts/view_member_profile.html
+++ b/accounts/templates/accounts/view_member_profile.html
@@ -3,7 +3,7 @@
 {% load markdown_deux_tags %}
 {% load mediawiki_links %}
 
-{% block title %}Medlem: {{member.get_full_name }} {% endblock %}
+{% block title %}Medlem: {% firstof member.get_full_name member.username %} {% endblock %}
 
 
 
@@ -19,11 +19,7 @@
     </div>
     <div class="col-md-9">
         <h2>
-        {% if member.get_full_name %}
-            {{ member.get_full_name }}
-        {% else %}
-            {{ member.username }}
-        {% endif %}
+        {% firstof member.get_full_name member.username %}
 
         {% if user == member %}
             <a href="{% url "edit_profile" %}">
