--- a/templates/base.html
+++ b/templates/base.html
@@ -144,7 +144,7 @@
             <li class="dropdown navbar-right">
                 <a href="#bruker" class="dropdown-toggle" data-toggle="dropdown">
                     <span class="glyphicon glyphicon-user"></span>
-                    {% if user.get_full_name %}{{ user.get_full_name }}{% else %}{{ user.username }}{% endif %}
+                        {% firstof user.get_full_name user.username %}
                     <span class="caret"></span>
                 </a>
                 <ul class="dropdown-menu">
