--- a/accounts/templates/accounts/view_member_profile.html
+++ b/accounts/templates/accounts/view_member_profile.html
@@ -2,6 +2,7 @@
 {% load thumbnail %}
 {% load markdown_deux_tags %}
 {% load mediawiki_links %}
+{% load static %}
 
 {% block title %}Medlem: {% firstof member.get_full_name member.username %} {% endblock %}
 
@@ -14,7 +15,7 @@
             {% if member.avatar %}
                 src="{% thumbnail member.avatar 150x150 %}"
             {% else %}
-                src="{{ STATIC_URL }}img/default_avatar.png"
+                src="{% static "img/default_avatar.png" %}"
             {%endif %}>
     </div>
     <div class="col-md-9">
