--- a/interactive/templates/interactive/advent_base.html
+++ b/interactive/templates/interactive/advent_base.html
@@ -1,7 +1,9 @@
 {% load mediawiki_links listutil %}
 {% load markdown_deux_tags %}
 {% load thumbnail %}
-{% load sekizai_tags static %}
+{% load sekizai_tags %}
+{% load static %}
+
 
 <!DOCTYPE html>
 <html lang="en">
@@ -32,12 +34,12 @@
     {% render_block "css" %}
 
     <!-- Fav and touch icons, for screen and mobile -->
-    <link rel="shortcut icon" href="{{STATIC_URL }}img/favicon.ico">
-    <link rel="apple-touch-icon" href="{{ STATIC_URL }}img/apple-touch-icon.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="{{ STATIC_URL }}img/apple-touch-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="{{ STATIC_URL }}img/apple-touch-icon-114x114.png">
+    <link rel="shortcut icon" href="{% static "img/favicon.ico" %}">
+    <link rel="apple-touch-icon" href="{% static "img/apple-touch-icon.png" %}">
+    <link rel="apple-touch-icon" sizes="72x72" href="{% static "img/apple-touch-icon-72x72.png" %}">
+    <link rel="apple-touch-icon" sizes="114x114" href="{% static "img/apple-touch-icon-114x114.png" %}">
     {% addtoblock "js" %}
-    <script src="{{ STATIC_URL }}wiki/js/core.js"></script>
+    <script src="{% static "wiki/js/core.js" %}"></script>
     {% endaddtoblock %}
 
     {% addtoblock "js-head" %}
@@ -61,7 +63,12 @@
     {% for row in doors|row_split:4 %}
     <tr>
         {% for door in row %}
-        <td class="advent-door"><a href="{{ door.get_absolute_url }}"><img src="/static/img/logo.png" /><span>{{ door.number }}</span></a></td>
+            <td class="advent-door">
+                <a href="{{ door.get_absolute_url }}">
+                    <img src="{% static "img/logo.png" %}" />
+                    <span>{{ door.number }}</span>
+                </a>
+            </td>
         {% endfor %}
     </tr>
     {% endfor %}
