--- a/accounts/templates/accounts/edit_profile.html
+++ b/accounts/templates/accounts/edit_profile.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% load thumbnail %}
 {% load bootstrap3 %}
+{% load static %}
 
 {% block title %}Endre bruker {% endblock %}
 
@@ -11,7 +12,7 @@
             {% if user.avatar %}
                 src="{% thumbnail user.avatar 150x150 %}"
             {% else %}
-                src="{{ STATIC_URL }}img/default_avatar.png"
+                src="{% static "img/default_avatar.png" %}"
             {%endif %}>
     </div>
 
