--- a/com/templates/com/com_details.html
+++ b/com/templates/com/com_details.html
@@ -3,12 +3,13 @@
 {% load markdown_deux_tags %}
 {% load thumbnail %}
 {% load sekizai_tags %}
+{% load static %}
 
 {% block title %}{{ com.com.name }}{% endblock %}
 
 {% block content %}
     {% addtoblock "css" %}
-        <link href="{{ STATIC_URL }}com/com.css" rel="stylesheet">
+        <link href="{% static "com/com.css" %}" rel="stylesheet">
     {% endaddtoblock %}
 
 <h2>{{ com.com.name }}</h2>
@@ -25,7 +26,7 @@
               {% if membership.user.avatar %}
                   src="{% thumbnail membership.user.avatar 150x150 %}"
               {% else %}
-                  src="{{ STATIC_URL }}img/default_avatar.png"
+                  src="{% static "img/default_avatar.png" %}"
               {%endif %}>
         </div>
 
