--- a/poll/templates/poll/poll_list.html
+++ b/poll/templates/poll/poll_list.html
@@ -63,27 +63,7 @@ Brukeravstemninger
 Ingen brukeravstemninger her enda.
 {% endfor %}
 
-{% if is_paginated %}
-<nav>
-    <ul class="pager">
-        {% if page_obj.has_next %}
-        <li class="previous">
-            <a href="?page={{ page_obj.next_page_number }}"><span aria-hidden="true">&larr;</span> Eldre</a>
-        </li>
-        {% endif %}
-
-        <li class="disabled pager-counter">
-            Side {{ page_obj.number }} av {{ page_obj.paginator.num_pages }}
-        </li>
-
-        {% if page_obj.has_previous %}
-        <li class="next">
-            <a href="?page={{ page_obj.previous_page_number }}">Nyere <span aria-hidden="true">&rarr;</span></a>
-        </li>
-        {% endif %}
-    </ul>
-</nav>
-{% endif %}
+{% include "includes/pagination.html" %}
 
 {% endblock %}
 {% block sidebar %}
