--- a/poll/templates/poll/poll_list.html
+++ b/poll/templates/poll/poll_list.html
@@ -27,36 +27,11 @@ Brukeravstemninger
     <h4>{{ poll.question }}</h4>
 
     {% if poll.voted %}
-    <p>{{ poll.get_total_votes }} bruker{% if poll.get_total_votes > 1 %}e{% endif %} har stemt.</p>
-    {% for choice in poll.choices.all %}
-    <div class="choice">{{ choice.choice }}</div>
-    <div class="progress">
-        <div class="progress-bar" style="width:{% widthratio choice.votes poll.get_total_votes 100 %}%">
-                        <span class="percent{% if choice.votes == 0 %} zero{% endif %}">
-                            {% widthratio choice.votes poll.get_total_votes 100%}%
-                        </span>
-        </div>
-    </div>
-    {% endfor %}
+        {% include "poll/includes/poll_result.html" %}
     {% else %}
-    <form action="{% url "poll.views.vote" poll.id %}?next={% url "user_polls" %}" method="post">
-    {% csrf_token %}
-    {% for choice in poll.choices.all %}
-    <div class="radio">
-        <label>
-            <input type="radio" name="choice" value="{{ choice.id }}">
-            <span class="choice">{{ choice.choice }}</span>
-        </label>
-    </div>
-    {% endfor %}
-    {% if user.is_authenticated %}
-    <button class="btn btn-default btn-block" type="submit">Stem</button>
-    {% else %}
-    <div class="center" style="color:#999;">Logg inn for å stemme</div>
+        {% include "poll/includes/vote_form.html" %}
     {% endif %}
-    </form>
-    {% endif %}
-    </div>
+</div>
 </div>
 {% endwith %}
 {% empty %}
