La til quiz i interactive.

--- a/templates/base.html
+++ b/templates/base.html
@@ -131,6 +131,7 @@
             <ul class="dropdown-menu" >
                 <li><a href="{% url "user_polls" %}">Brukeravstemninger</a></li>
                 <li><a href="{% url "users_birthday" %}">Bursdag</a></li>
+                <li><a href="{% url "quiz_list" %}">Quiz</a></li>
             </ul>
         </li>
         {% endif %}
