--- a/interactive/templates/interactive/advent_door_base.html
+++ b/interactive/templates/interactive/advent_door_base.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "interactive/advent_base.html" %}
 {% load mediawiki_links %}
 {% load markdown_deux_tags %}
 {% load thumbnail %}
