--- a/content/templates/content/blog_post.html
+++ b/content/templates/content/blog_post.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load markdown_deux_tags %}
+{% load markdown %}
 {% block title %}{{ post.title }}{% endblock %}
 
 {% block more_head %}
