--- a/templates/base.html
+++ b/templates/base.html
@@ -32,6 +32,7 @@
     <link rel="apple-touch-icon" sizes="114x114" href="{% static "img/apple-touch-icon-114x114.png" %}">
     {% addtoblock "js" %}
     <script src="{% static "wiki/js/core.js" %}"></script>
+    <script src="{% static "js/base.js" %}"></script>
     {% endaddtoblock %}
 
     {% render_block "js-head" %}
