--- a/static/css/default.css
+++ b/static/css/default.css
@@ -267,8 +267,8 @@ li.pager-counter {
     padding: 10px;
 }
 
-.float-left {
+/*.float-left {
     position: fixed;
     left: 50px;
     top: 20%;
-}
+}*/
