La til kommentarer paa skraatcast.

--- a/templates/base.html
+++ b/templates/base.html
@@ -278,7 +278,7 @@
 
 {# Obligatory jQuery #}
 {% addtoblock "js-head" %}
-    <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
+    <script src="{% static "jquery/jquery.min.js" %}"></script>
 {% endaddtoblock %}
 
 {# Google Analytics #}
