--- a/podcast/templates/podcast/podcast_detail.html
+++ b/podcast/templates/podcast/podcast_detail.html
@@ -37,8 +37,9 @@
 {% endif %}
 {% if podcast.extra_markdown %}
 <p>
-    {{ podcast.extra_markdown | markdown:"unsafe"}}
+    {{ podcast.extra_markdown | markdown:"unsafe" }}
 </p>
+{% include "content/includes/comments.html" with content=podcast %}
 {% endif %}
 
 {% endblock %}
