--- a/templates/comments/preview.html
+++ b/templates/comments/preview.html
@@ -11,6 +11,19 @@
     <h2>{% trans "Forhåndsvisning av kommentar" %}</h2>
     {% if form.errors %} 
         <h3>{% blocktrans count form.errors|length as counter %}Please correct the error below{% plural %}Please correct the errors below{% endblocktrans %}</h3>
+        {% for field in form %}
+          {% if field.is_hidden %}
+            <div>{{ field }}</div>
+          {% else %}
+            {% if field.errors %}
+            <p  {% if field.errors %} class="error"{% endif %}
+                    {% ifequal field.name "honeypot" %} style="display:none;"{% endifequal %}>
+              {{ field.label_tag }}
+              {{ field.errors }}
+            </p>
+            {% endif %}
+      {% endif %}
+    {% endfor %}
     {% else %}
 
         <div class="row comment" id="c{{ comment.id }}">
