--- a/nabladet/templates/nabladet/nablad_list.html
+++ b/nabladet/templates/nabladet/nablad_list.html
@@ -15,8 +15,12 @@
     <td style="width:20%">
         <a href="{{ n.get_absolute_url }}"> {{ n.pub_date|date:"F Y" }} </a>
     </td>
-    <td style="width:70%;">
+    <td style="width:40%;">
         {{ n.headline }}
+    </td>
+    <td style="width:30%;">
+        {% include "accounts/includes/like.html" with object=n%}
+    </td>
     <td style="width:10%; align:right;">
         <a class="btn btn-small" href="{{ n.file.url }}"><i class="icon-download-alt"></i></a>
     </td>
