--- a/poll/templates/poll/poll_list.html
+++ b/poll/templates/poll/poll_list.html
@@ -25,7 +25,7 @@ Brukeravstemninger
 
 <div class="poll well">
     <h4>{{ poll.question }}</h4>
-
+    {% include "accounts/includes/like.html" with object=poll%}
     {% if poll.voted %}
         {% include "poll/includes/poll_result.html" %}
     {% else %}
