--- a/interactive/static/interactive/css/advent_calendar.css
+++ b/interactive/static/interactive/css/advent_calendar.css
@@ -6,13 +6,25 @@
 }
 
 .advent-door {
-    border: 1px;
-    margin: 10px;
     height: 240px;
-    width: 180px;
-
+    width: 220px;
+    position: relative;
     text-decoration: none;
     font-size: 100px;
+    z-index: 3;
+    margin-top: 10px;
+}
+
+.advent-door::before {
+    content: ' ';
+    background-image: url(/media/door.jpg);
+    background-size: 220px 240px;
+    position: absolute;
+    width: 220px;
+    height: 240px;
+    z-index: 2;
+    display: table-cell;
+    left: 0px;
 }
 
 .advent-door p {
@@ -24,18 +36,24 @@
     display: inline-block;
 }
 
-.advent-door-open span {
+.advent-number {
+    z-index: 30;
+    display: block;
+    position: relative;
+}
+
+.advent-door-open .advent-number {
     display: none;
 }
 
 .advent-door-open {
-    background: #000;
+    background: #666;
 
-    -webkit-transition: background 2s ease-in;
-    -moz-transition: background 2s ease-in;
-    -o-transition: background 2s ease-in;
-    -ms-transition: background 2s ease-in;
-    transition: background 2s ease-in;
+}
+
+.advent-door-open::before {
+    opacity: 0;
+    transition: opacity 2s ease-in;
 }
 
 body {
@@ -58,6 +76,42 @@ body {
 }
 
 h1 {
-    font-size: 40px;
+    font-size: 100px;
     text-align: center;
+}
+
+html, body {
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    height: 100%;
+}
+body {
+    background: url(/media/jul.jpg) 0 0;
+    background-size: 100%;
+    background-repeat: repeat-y;
+}
+
+
+.info {
+    display: none;
+    position: absolute;
+    z-index: 2;
+    top: 0;
+    left: 0;
+    font-size: 20px;
+    color: #ffd;
+    padding: 4px;
+}
+.info a {
+    color: #ffd;
+}
+body.before-game .info {
+    display: block;
+}
+.text {
+    background: rgba(0,0,0,0.5);
+    padding: 30px;
+    font-size: 20px;
+    border-radius: 15px;
 }
