--- a/interactive/templates/interactive/advent_door_base.html
+++ b/interactive/templates/interactive/advent_door_base.html
@@ -1,6 +1,6 @@
 {% extends "interactive/advent_base.html" %}
 {% load mediawiki_links %}
-{% load markdown_deux_tags %}
+{% load markdown %}
 {% load thumbnail %}
 {% load sekizai_tags %}
 
@@ -10,6 +10,9 @@
 
 <h1>{{ door.number }}</h1>
 
+<div class="text">
 {{ door.content|markdown:"unsafe" }}
+</div>
 
+<div></div>
 {% endblock %}
