--- a/templates/includes/bootstrap_links.html
+++ b/templates/includes/bootstrap_links.html
@@ -1,11 +1,12 @@
 {% load sekizai_tags %}
+{% load static %}
 {% addtoblock "css" %}
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="{% static "bootstrap/dist/css/bootstrap.min.css" %}">
+    <link rel="stylesheet" href="{% static "bootstrap/dist/css/bootstrap-theme.min.css" %}">
 {% endaddtoblock %}
 
 {% addtoblock "js" %}
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+    <script src="{% static "bootstrap/dist/js/bootstrap.min.js" %}"></script> 
 {% endaddtoblock %}
 
 
