La til physicsjsanimasjon

--- a/interactive/templates/interactive/advent_base.html
+++ b/interactive/templates/interactive/advent_base.html
@@ -47,7 +47,8 @@
     {% endaddtoblock %}
 
     {% addtoblock "js-head" %}
-        <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
+        <script src="{% static "jquery/jquery.min.js" %}"></script>
+        <script src="{% static "requirejs/require.js" %}"></script>
     {% endaddtoblock %}
 
     {% render_block "js-head" %}
