--- a/interactive/templates/interactive/advent_door_base.html
+++ b/interactive/templates/interactive/advent_door_base.html
@@ -9,7 +9,7 @@
 
 {% block content %}
 
-<h1 xmlns="http://www.w3.org/1999/html">{{ door.number }}</h1>
+<h1>{{ door.number }}</h1>
 
 <div class="text">
     {% include "accounts/includes/like.html" with object=door%}
