--- a/interactive/templates/interactive/advent_base.html
+++ b/interactive/templates/interactive/advent_base.html
@@ -76,12 +76,12 @@
     <div class="advent-table">
         {% for row in doors|row_split:4 %}
             {% for door in row %}
-
                 <div class="advent-door" data-open="{{ door.is_published }}">
+                <div class="advent-before" {% if door.image %} style="background-image: url({{door.image.url}});" {% endif %}></div>
                 {% if door.is_published %}
 
                 <a href="{{ door.get_absolute_url }}">
-                    <img src="/media/tree.ico" />
+                    <img src="{% cycle "/media/advent/tree.ico" "/media/advent/snowman.png" "/media/advent/lue.png" "/media/advent/fjosnisse.png" "/media/advent/reindeer.png" "/media/advent/gift.png" "/media/advent/bells.png"%}" />
                 <p>
                     {{ door.short_description }}
                 </p>
